assets/css/style.css
/*----------GLOBAL VARIABLES----------*/
:root {
	--default-font:        #C5C6C7;
	--default-font-hover:  #E0E0E0;
	--accent-font:         #66FCF1;

	--background-bg:       #1F2833;
	--container-bg:        #0B0C10;
	--container-bg-hover:  #191B24;
}

/*--------------DEFAULTS--------------*/
* {
	font-family: 'Roboto Mono', monospace;
	color: var(--default-font);
}

html, body {
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
    scroll-behavior: smooth;
    background-color: var(--background-bg);
}

h1 {
	width: 100%;
	font-size: 3em;
	margin: 0;
	color: var(--accent-font);
}

h2 {
	width: 100%;
	font-size: 2em;
	margin: 0;
	color: var(--accent-font);
}

h3 {
	width: 100%;
	font-size: 1.5em;
	margin: 0;
}

.es {
	display: none;
}

/*--------------NAVBAR--------------*/

#Navbar {
	display: flex;
	position: fixed;
	z-index: 100;
	align-items: center;

	width: 100%;
	height: 50px;

	padding-left: 30px;

	background-color: var(--container-bg);
	color: var(--default-font);


	font-size: 100%;
}

#NavButtons {
	display: flex;
	align-items: center;
	justify-content: center;

	position: absolute;
	right: 50px;
	margin: 0;
	padding: 0;
}

#NavButtons a {
	transition: 0.2s ease-in-out;
}

#NavButtons a:hover {
	color: var(--default-font-hover);
}

#NavButtons p {
	margin-left: 10px;
	margin-right: 10px;
}

@media screen and (max-width: 1000px) {
	#Navbar {
		height: 100px;
	}
	#NavButtons {
		flex-direction: column;
		right: 0px;
		width: 100%;
		top: 100px;
	}

	#NavButtons a {
		padding-left: 50px;
		display: none;
		transition: 0.2s ease-in-out;
	}

	#NavButtons.ResponsiveNavbar a {
		float: none;
		position: initial;
		display: block;
		width: 100%;
		height: 100px;
		line-height: 100px;
		font-size: 2em;
		text-align: left;
		background-color: var(--container-bg);
		border-color: var(--accent-font);
		border-width: 1px;
		border-style: solid;
	}

	#NavButtons.ResponsiveNavbar a:hover {
		background-color: var(--container-bg-hover);
	}

	#NavButtons p {
		display: none;
	}

}

#Navbar > #NavbarLogo {
	color: var(--accent-font);
}

#Navbar > a {
	display: inline-block;
	font-size: 2em;
}

#Navbar a {
	text-decoration: none;
	color: var(--default-font);
}

#Navbar #NavbarMenu {
	right: 50px;
	position: absolute;
	display: none;
}

@media screen and (max-width: 1000px) {
	#Navbar #NavbarMenu {
		display: block;
	}
}

a.Anchor {
    display: block;
    position: relative;
    top: -50px;
    visibility: hidden;
}
@media screen and (max-width: 1000px) {
	a.Anchor {
		top: -100px;
	}
}

.Container {
	width: 80%;
}

/*--------------MAIN--------------*/

#Main {
	display: flex;
	flex-direction: column;
	background-color: var(--background-bg);

	justify-content: center;
	align-items: center;

	height: 100%;
}

#Main > #Name {
	font-size: 7vw;
	color: var(--accent-font);
}

#Main > #Subtitle {
	font-size: 3vw;
	color: var(--default-font);
}

#Main > #MiniContact {
	position: absolute;
	bottom: 10px;
	font-size: 2em;
	color: var(--default-font);
}

#Main > #MiniContact > a {
	color: var(--default-font);
	text-decoration: none;
	transition: 0.2s ease-in-out;
}

#Main > #MiniContact > a:hover {
	color: var(--default-font-hover);
}
/*--------------ABOUT--------------*/

#AboutContent {
	display: flex;

	flex-direction: column;
	justify-content: center;
	align-items: center;

	background-color: var(--background-bg);
}

#AboutContent .Title {

}

#AboutContent .Content {
	display: flex;
	flex-direction: row;
	justify-content: center;
	width: 100%;
}

@media screen and (max-width: 1000px) {
	#AboutContent .Content {
		flex-direction: column;
		justify-content: center;
		align-items: center;
	}
}

#AboutContent .Content #Description {
	width: 60%;
	padding: 30px;
	margin: 10px;
	background-color: var(--container-bg);
}

#AboutContent .Content #Description p {
	margin: 10px;
	font-size: 1.5em;
	display: block;
}
#AboutContent .Content #Description span {
	color: var(--accent-font); 
}

#AboutContent .Content #Photo {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 200px;
}

#AboutContent .Content #Photo img {
	height: 100%;
	border-radius: 50%;
}

#AboutContent .Content #Skillset {
	width: 40%;
	padding: 30px;
	margin: 10px;
	background-color: var(--container-bg);
}

@media screen and (max-width: 1000px) {
	#AboutContent .Content #Description {
		width: 100%;
	}
}
@media screen and (max-width: 1000px) {
	#AboutContent .Content #Skillset {
		width: 100%;
	}
}

#AboutContent ul {
	list-style-type: none;
}

.Stars {
	display: inline-flex;
	float: right;
}

.fa-star {
	color: var(--default-font);
}

.ColoredStar {
	color: var(--accent-font);
}


/*--------------PORTFOLIO--------------*/

#PortfolioContent {
	display: flex;
	flex-direction: column;
	background-color: var(--background-bg);

	justify-content: center;
	align-items: center;
}

#PortfolioContent .PortfolioList {
	width: 80%;
}


.GridList {
	width: 100%;
	display: grid;
	grid-template-columns: 50% 50%;
	grid-auto-rows: auto;
}

.Retracted {
	display: none;
}

.PortfolioList .Expand {
	text-decoration: none;
}

.Expandable {
	transition: all 0.5s;
}

@media screen and (max-width: 1000px) {
.GridList {
		grid-template-columns: auto;
		grid-auto-rows: auto;
		width: auto;
	}
}

#PortfolioContent .List {
	display: flex;
	flex-direction: column;

	background-color: var(--container-bg);

	color: var(--default-font);
	text-decoration: none;

	padding: 30px;
	margin: 10px;
	transition: 0.2s ease-in-out;
}

#PortfolioContent #GameJamList .List .MadeIn {
	margin-top: auto;
}



#PortfolioContent #GameJamList > div h1 {
	display: inline-block;
	width: auto;
	max-width: calc(100% - 200px);
}

#GameJamList a:hover {
	background-color: var(--container-bg-hover);
}

#PortfolioContent #GameJamList .GridList .List img {
	display: inline-block;
	margin-top: auto;
	margin-bottom: auto;
	margin-left: auto;
	width: auto;
	height: auto;

	max-width: 200px; 
	float: right;
}

@media screen and (max-width: 1000px) {
	#PortfolioContent #GameJamList .GridList .List img {
		display: block;
		max-width: 100%;
		float: none;
		margin-left: auto;
		margin-right: auto;
	
	}
	#PortfolioContent #GameJamList div h1 {
		display: none;
	}
}

/*--------------CONTACT--------------*/

#ContactContent {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background-color: var(--background-bg);
}

#ContactContent .ContactInfo {
	display: flex;
	justify-content: center;
	align-items: center;

	background-color: var(--container-bg);
	margin: 10px;
	height: 150px;
	line-height: 150px;
	text-align: center;
}

#ContactContent #ContactEmail {
	grid-column: 1 / 3;
}
@media screen and (max-width: 1000px) {
	#ContactContent #ContactEmail {
		grid-column: 1 / 2;
		font-size: 0.75em;
	}
}

#ContactContent a {
	text-decoration: none;
	transition: 0.2s ease-in-out;

}

#ContactContent a:hover {
	background-color: var(--container-bg-hover);
}


.ContactInfo .fab,
.ContactInfo .fas {
	font-size: 80px;
	width: 80px;
	height: : 80px;
	margin-left: 30px;
	float: left;
}

/*--------------FOOTER--------------*/

footer {
	display: flex;
	flex-direction: column;
	background-color: var(--container-bg);

	justify-content: center;
	align-items: center;

	margin-top: 100px;

	height: 100px;
}

/*--------------RESUME--------------*/

#Resume {
	width: 100%;
	height: calc(100% - 50px);
	margin-top: 50px;
}
@media screen and (max-width: 1000px) {
	#Resume {
		height: calc(100% - 100px);
		margin-top: 100px;
	}
}

#Download {
	display: flex;
	justify-content: center;
	align-items: center;

	width: 100px;
	height: 100px;
	border-radius: 50%;

	background-color: var(--container-bg);

	position: absolute;
	bottom: 50px;
	left:  50px;

	font-size: 60px;
}

#Download:hover {
	background-color: var(--container-bg	-hover);
}

